--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js"
+    "dev": "node --env-file=.env --watch-path=. app.js",
+    "init": "node --env-file=.env models/init.js"
   },
   "author": "",
   "license": "ISC",
